test/TestPhases/causality/invalid/Singleton5.blc
@[CFunction(binding="",header="")]
extern singleton function g() returns bool

function f() returns bool
    return g()
end

activity B()
    let b = f()
    await b
end

@[EntryPoint]
activity A()
    cobegin
        run B()
    with
        let b = f()
        await b
    end
end